--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,6 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
 
 /**
  * This injects Tailwind's base styles, which is a combination of
@@ -44,6 +39,12 @@
  * @import "components/buttons";
  * @import "components/forms";
  */
+
+.button {
+    @apply .bg-blue .text-white .no-underline .rounded-lg .text-sm .py-2 .px-5;
+    box-shadow: 0 2px 7px 0 #b0eaff;
+}
+
 
 /**
  * This injects all of Tailwind's utility classes, generated based on your
